feat (contact): establishment of contact layout

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,7 @@
 
 // layout
 @import 'layout/title';
+@import 'layout/about';
+@import 'layout/product';
+@import 'layout/contact';
+@import 'layout/footer';
