--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,29 @@
 body {
   margin: 0;
   padding: 0;
-  height: 2000px;
+  color: #58585a;
+}
+
+h2 {
+  color: #c12026;
+  font-size: 40px;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 60px;
+  border-bottom: 5px solid #58585a;
+  border-radius: 10px;
+}
+
+li {
+  color: red;
+}
+
+span {
+  color: #58585a;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .navbar {
@@ -14,7 +36,9 @@ body {
   width: 100%;
   z-index: 2;
   background-color: #58585a;
+  box-shadow: 10px 10px 12px 0px gray;
   font-size: 20px;
+  transition: all 0.5s;
 }
 .navbar_leftSide {
   display: flex;
@@ -43,6 +67,10 @@ body {
 }
 .navbar_rightSide-number {
   margin: 0 20px 0 10px;
+}
+
+.navbar-hide {
+  opacity: 0;
 }
 
 header {
@@ -76,6 +104,84 @@ header {
   position: absolute;
   bottom: 0;
   height: 10%;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 60px 50px 60px 50px;
+}
+.about-text {
+  font-size: 25px;
+}
+.about-map {
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  padding: 60px 50px 60px 50px;
+  background-color: #f2f2f2;
+}
+.product-list {
+  color: green;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-linkContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-linkContainer-phone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-linkContainer-email {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-linkContainer-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.contact-icon-fb {
+  height: 100px;
+  margin-right: 50px;
+}
+.contact-icon-insta {
+  height: 130px;
+  margin-right: 50px;
+}
+.contact-icon-ytb {
+  height: 150px;
+  padding: 0;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  background-color: #58585a;
+  color: white;
 }
 
 /*# sourceMappingURL=styles.css.map */
