--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,27 @@
-body{
+body {
     margin: 0;
     padding: 0;
-    height: 2000px;
+    color: $secondary-color;
 }
+
+h2 {
+    color: $primary-color;
+    font-size: 40px;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 60px;
+    border-bottom: 5px solid $secondary-color;
+    border-radius:  10px;
+}
+
+li {
+    color: red;
+}
+
+span {
+    color: $secondary-color;
+}
+
+html {
+    scroll-behavior: smooth;
+  }
