--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -8,7 +8,10 @@
     width: 100%;
     z-index: 2;
     background-color: $secondary-color;
+    box-shadow: 10px 10px 12px 0px gray;
     font-size: 20px;
+
+    transition: all 0.5s;
 
     &_leftSide {
         display: flex;
@@ -44,4 +47,8 @@
             margin: 0 20px 0 10px;
         }
     }
+}
+
+.navbar-hide {
+    opacity: 0;
 }
