--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,16 @@
+@font-face {
+    font-family: 'myFirstFont';
+    src: url('../../font/PFBeauSansPro-Regular.woff');
+  }
+
+
 body {
     margin: 0;
     padding: 0;
+    font-size: 25px;
     color: $secondary-color;
+    font-family: 'myFirstFont';
+    text-align: center;
 }
 
 h2 {
@@ -12,10 +21,13 @@ h2 {
     margin-bottom: 60px;
     border-bottom: 5px solid $secondary-color;
     border-radius:  10px;
+    text-align: center;
 }
 
 li {
-    color: red;
+    color: $primary-color;
+    text-align: start;
+    margin-top: 15px;
 }
 
 span {
@@ -24,4 +36,18 @@ span {
 
 html {
     scroll-behavior: smooth;
-  }
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+
+
+@media screen and (max-width: 600px) {
+
+    body {
+        font-size: 15px;
+    }
+}
