--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 60px 50px 60px 50px;
 
     &-linkContainer {
         display: flex;
@@ -26,22 +27,83 @@
         justify-content: center;
         align-items: center;
         flex-wrap: nowrap;
+        margin-top: 25px;
     }
 }
 
 .contact-icon {
     &-fb {
-        height: 100px;
-        margin-right: 50px;
+        height: 60px;
+        margin-right: 70px;
     }
 
     &-insta {
-        height: 130px;
+        height: 70px;
         margin-right: 50px;
     }
 
     &-ytb {
-        height: 150px;
+        height: 75px;
         padding: 0;
+    }
+}
+
+.contact {
+    
+    &-subTitle {
+        font-size: 25px;
+        margin: 0;
+    }
+
+    &-link {
+        font-size: 30px;
+        margin-bottom: 120px;
+    }
+}
+
+
+// mobile device
+@media screen and (max-width: 600px) {
+
+    .contact {
+
+        &-linkContainer-social {
+            justify-content: space-between;
+            width: 90%;
+        }
+
+        &-subTitle {
+            font-size: 23px;
+        }
+
+        &-link {
+            font-size: 23px;
+            text-align: center;
+        }
+
+        &-linkContainer-phone {
+            padding: 0 20px 0 20px;
+        }
+
+        &-linkContainer-title {
+            padding: 0 20px 0 20px;
+        }
+
+    }
+
+    .contact-icon {
+        &-fb {
+            height: 50px;
+            margin: 0;
+        }
+
+        &-insta {
+            height: 60px;
+            margin: 0;
+        }
+
+        &-ytb {
+            height: 65px;
+        }
     }
 }
