--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,5 +6,6 @@ footer {
     height: 200px;
     background-color: $secondary-color;
     color: white;
-
+    font-size: 15px;
+    padding: 0 20px 0 20px;
 }
