--- a/sass/layout/_title.scss
+++ b/sass/layout/_title.scss
@@ -4,7 +4,7 @@ header {
     align-items: center;
     position: relative;
     height: 100vh;
-    background-image: url('../../images/background_title.jpeg');
+    background-image: url('../images/background_title.jpeg');
     background-position: center;
 
 }
@@ -32,8 +32,8 @@ header {
 
 .headerArrow {
     position: absolute;
-    bottom: 0;
     left: 50%;
+    bottom: 0;
     transform: translateX(-50px);
     height: 100px;
 }
@@ -54,5 +54,6 @@ header {
 
     .headerArrow {
         display: flex;
+        bottom: 25px;
     }
 }
