--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'myFirstFont';
-    src: url('../../font/PFBeauSansPro-Regular.woff');
+    src: url('../font/PFBeauSansPro-Regular.woff');
   }
 
 
