--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,5 +11,6 @@
 @import 'layout/title';
 @import 'layout/about';
 @import 'layout/product';
+@import 'layout/partner';
 @import 'layout/contact';
 @import 'layout/footer';
